--- a/src/pages/sign-up/sign-up.scss
+++ b/src/pages/sign-up/sign-up.scss
@@ -19,7 +19,7 @@ ion-input
 {
        height:40px;
        border-radius:10px;
-        border:4px solid #B8D7E1;
+        border:2px solid ghostwhite;
 }
 .list-md .item-input:last-child {
     border-bottom:0px;    
