--- a/src/pages/grid/grid.scss
+++ b/src/pages/grid/grid.scss
@@ -1,6 +1,41 @@
-page-grid {
-.zzz{
-    height:20%;
-    border-radius: 8px;
+.galler{
+    text-align: center;
+    left:0px!important;
 }
+.notify{
+    font-size:60px;
+     width:120px;
+    height:120px;
 }
+.leaderi{
+    font-size:60px;
+     width:80px;
+    height:60px;
+    align:right!important;}
+.leaderm{
+    font-size:60px;
+     width:80px;
+    height:60px;
+}
+.settings{
+    width:100%;
+    margin-top:10%;
+}
+.row2{
+    margin-top:10%;
+}
+.row3{
+    margin-top:10%;
+}
+.nnotify{
+    font-size:12px;
+}
+.notifyy{
+    width:120px;
+    height:70px; 
+}
+.notifyyy{
+    width:100px;
+    height:85px; 
+}
+
