--- a/src/pages/grid/grid.scss
+++ b/src/pages/grid/grid.scss
@@ -1,3 +1,4 @@
+page-grid{
 .galler{
     text-align: center;
     left:0px!important;
@@ -21,14 +22,8 @@
     width:100%;
     margin-top:10%;
 }
-.row2{
-    margin-top:10%;
-}
-.row3{
-    margin-top:10%;
-}
 .nnotify{
-    font-size:12px;
+    font-size:15px;
 }
 .notifyy{
     width:120px;
@@ -38,4 +33,8 @@
     width:100px;
     height:85px; 
 }
+.card-md + ion-card {
+margin-top:10px;
+}
 
+}
