--- a/src/pages/fracture/fracture.scss
+++ b/src/pages/fracture/fracture.scss
@@ -3,4 +3,10 @@ page-fracture {
 {
       box-shadow: 10px 14px 28px #131d26
 }
+img {
+//     position: absolute;
+//     right: 0px;
+//     bottom: 0px;
+    z-index: -1;
+}
 }
